2005-04-05  Richard Hult  <richard@imendio.com>

	* src/planner-print-job.c: (planner_print_job_text),
	(planner_print_job_show_clipped):
	* src/planner-print-job.h:
	* src/planner-table-print-sheet.c:
	(table_print_sheet_print_header_cell),
	(table_print_sheet_print_cell): Patch from fmoraes@nc.rr.com to
	use pango for printing text.

2005-04-02  Richard Hult  <richard@imendio.com>

	* autogen.sh:
	* configure.in: Bump requirements.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-22  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-time.c (mrp_time2_align_next): Fix for quarter,
	half year, and year.

	* src/planner-main.c (main): Fix opening relative paths on the
	command line.

2005-03-20  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-view.c: (get_label):
	* src/planner-sidebar.c: (sidebar_init), (sidebar_modify_bg),
	(planner_sidebar_append), (planner_sidebar_set_active):
	* src/planner-ttable-view.c: (get_label): Tweak the sidebar a bit.

2005-03-15  Richard Hult  <richard@imendio.com>

	Fix bug #157254.
	
	* libplanner/mrp-time.c: Add new (temporary) API and use it to
	improve performance a lot with large projects. Long term we should
	either switch to it completely or rename it.

	* src/planner-gantt-background.c: (gantt_background_draw):
	* src/planner-gantt-header.c: (gantt_header_init),
	(gantt_header_expose_event), (gantt_header_motion_notify_event):
	* src/planner-gantt-print.c: (print_time_header):
	* src/planner-scale-utils.c: (planner_scale_format_time):
	* src/planner-scale-utils.h:
	* src/planner-task-dialog.c: (task_dialog_update_schedule_label),
	(task_dialog_calendar_changed_cb): Use the new API.

	* tests/time-test.c: Remove obsolete test.

2005-03-13  Richard Hult  <richard@imendio.com>

	* Release 0.13.
	
	* Makefile.am: Fix build.

	* configure.in: Bump to 0.13

	* src/planner-gantt-print.c (planner_gantt_print_do): 