@@ -1,3 +1,7 @@
+2005-04-03  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
+
+	* src/planner-window.c (window_about_cb): port to GtkAboutDialog.
+
 2005-04-05  Richard Hult  <richard@imendio.com>
 
 	* src/planner-print-job.c: (planner_print_job_text),
